Issue #119 crc calculation not properly initialized
Issue #118 format_arg_list truncates output if bigger than 256 bytes
Issue #117 format_arg_list use fixed size, json corruption
Issue #116 Error in decodification of I021/271 version 2.1
Issue #114 use uniform spelling for twos and two's (in two's complement)
Feature: Added CMake building mechanism
Modifications in CAT011
All code reformated using CLion automatic reformat

2.6.1 (python_v0.5.15)
19.8.2020.
Feature #135 Implement extensive JSON output format

2.6.2 (python_v0.5.16)
26.8.2020.
Issue #151 Scale does not match the spec for I062/380, subfield #22 (Position)
Issue #152 Longitude min/max is +/- 90 deg in I062/380 subfield #9 (Trajectory Intent Data)
Issue #153 Problem decoding Runway Designation in I062/390
Issue #154 Scale does not match the spec for I062/500, subfield # 3
Issue #155 Scale does not match the spec for I062/500, subfield # 5

2.7.0 (python_v0.6.0)
Issue #159 Track Angle Rate should be encoded as signed in I021/165 
Issue #160 Typos in bit value descriptions in asterix_cat021_2_4.xml
Issue #161 CAT021 - problem decoding Military Extended Squitter in Reserved Expansion Field
Issue #104 problem with Data Item I048/030, Warning/Error Conditions and Target Classification 
Issue #156 Duplicate JSON keys for I062/510 Composed Track Number
Issue #162 No JSON array for I048/030 and I062/510 if only one extent is present in the data item
Warning: with this update following items are changed in JSON and Python format
001/030, 001/130, 001/210, 002/050, 002/060, 002/080, 008/100, 008/110, 019/553, 020/030, 021/110, 023/110, 025/100, 048/030, 062/510, 252/240
Elements in those items (all variable items with only one extent) are now presented as list of dictionaries.

Not versioned yet
Issue #166 Scale missing from Mode 5 GNSS-derived Altitude in I062/110
Issue #167 Subfield 8 of I062/380 (Trajectory Intent Status) should be defined as Variable in xml config